<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dam.gamo.RegistreActivity">

    <ImageView
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:src="@drawable/boiramontanya" android:scaleType="matrix"
        android:id="@+id/imageView"
        android:contentDescription="@string/Imatge" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/FonsTransparent"
        android:padding="20dp"
        android:alpha="50"
        android:layout_margin="20dp"
        android:windowSoftInputMode="stateVisible|adjustResize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registre"
            android:id="@+id/tvRegistre"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/Text"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/etMail"
            android:hint="@string/Email"
            android:layout_below="@+id/tvRegistre"
            android:ems="10"
            android:background="@color/FonsCamps"
            android:textColor="@color/TextCamps"
            android:textColorHint="@color/TextCamps"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/Nom"
            android:id="@+id/etNom"
            android:layout_below="@+id/etMail"
            android:ems="10"
            android:background="@color/FonsCamps"
            android:textColor="@color/TextCamps"
            android:textColorHint="@color/TextCamps"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/Cognom"
            android:id="@+id/etCnom"
            android:layout_below="@+id/etNom"
            android:ems="10"
            android:background="@color/FonsCamps"
            android:textColor="@color/TextCamps"
            android:textColorHint="@color/TextCamps"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/Contrasenya"
            android:background="@color/FonsCamps"
            android:textColor="@color/TextCamps"
            android:textColorHint="@color/TextCamps"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/etCnom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword2"
            android:layout_below="@+id/etPassword"
            android:hint="@string/Repetircontrasenya"
            android:background="@color/FonsCamps"
            android:textColor="@color/TextCamps"
            android:textColorHint="@color/TextCamps"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:id="@+id/btRegistre"
            android:layout_below="@+id/etPassword2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/FonsBotons"
            android:textColor="@color/TextBotons"/>

    </RelativeLayout>

</RelativeLayout>
